tests/golden/errors/cramped_after_string.kso
main = print "a">> print "b"
